--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.6",
     "@tailwindcss/postcss": "^4.1.3",
     "express": "^4.18.2",
+    "linktree": "file:",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.3",
